# robosoc_eurobot_2017

./: #package.xml#  .MD25.py.swp  .gitignore  .package.xml.swp  CMakeLists.txt  LICENSE.md  README.md  ROS_CHEATSHEET  getIPAndEmail.sh  indigo-desktop-full.rosinstall  main.launch  package.xml  package.xml~
PythonAStar/: main.py  map_generator.py
cad/primary/: Link  assembly.SLDASM  back.SLDPRT  base.SLDPRT  front.SLDPRT  md25_mount.SLDPRT  motor.SLDPRT  roller_holder_top.SLDPRT  roller_mount_lower.SLDPRT  roller_mount_mid.SLDPRT  wheel.SLDPRT  ~$back.SLDPRT
launch/: main.launch  ros_boot.sh  test.launch  test2.launch
miscellaneous/: IMUcovariance  imuData.txt  robotConfig.rviz
src/: .MD25.swp  .imu_odom_publisher.py.swp  GoTopy  MD25.py  SimpleDriver.py  __init__.py  example_code.py  example_servo.py  getIPAndEmail.sh  imu_odom_publisher.py  publisher.py  time_keeper.py
src/ActualPrimaryRobot/: PID.py  main_program.py  obstacle_avoidance.py
src/Adafruit_MCP3008.egg-info/: SOURCES.txt
src/ESC/: ESC.py  example_ESC.py
src/Encoders/: Encoder.py
src/IRSensors/: IRsensor.py  example_IRsensor.py
src/LCD/: display_wifi.py  display_wifi_big.py  example.py
src/LimitSwitch/: Bumper.py  example_Bumper.py  simple_example_LimitSwitch.py
src/Main/: MD25.py  map.xml  nav_node.py
src/MotorControl/: .drive.py.swp  MD25.py  MD25_example.py  Robot.py  drive.py
src/Navigation/: navigation.py
src/PrimaryRobot/: MD25.py  PID.py  PrimaryRobotState.py  Robot.py  StartButton.py  SubFunc_Anto.py  SubscriberFunctions.py  main_program.py  obstacle_avoidance.py
src/PythonAstar/: Simulator  Simulator.py  astar.py  astar_node.py  exception.py  main.py  map.py  map_generator.py  map_helper.py  map_loader.py  visualiser.py
src/RobotFunctions/: high_level_primary.py  high_level_secondary.py  labled_map.pptx  low_level_common.py  low_level_primary.py  low_level_secondary.py  main_primary.py  main_secondary.py  map_coords.xlsx  middle_level_primary.py  middle_level_secondary.py
src/SecondaryRobot/: Bumper.py  FUCKYOUsecondary_main.py  MD25.py  PID.py  PrimaryRobotState.py  StartButton.py  SubFunc_Anto.py  arm_control.py  bumper_listener.py  high_level_secondary.py  main_program.py  main_secondary.py  middle_level_secondary.py  my_bumper.py  obstacle_avoidance.py  secondary_main.py  secondary_main.py.save  secondary_main.py.save.1  secondary_main_pid.py  secondary_main_program.py  test.py
src/Sensors/: SRF08.py
src/ServoMotor/: Servo.py  example_Servo.py  move_arm.py  servo_cylinder.py
src/StateMachine/: RobotStates.py
src/StepperControl/: .example_Stepper_Landon.py.swp  Stepper.py  Stepper2.py  example_Stepper.py  stepper_rotate_cylinder.py
src/UltrasonicSensor/: SRF08.py  example_SRF08.py
src/UltrasonicSensors/: SRF08.py  example_SRF08.py
src/examples/: SRF08.py  add_two_ints_client.py.save  add_two_ints_server.py  example_SRF08.py  ir_receiver.py  ir_sensor.py  msg_receiver.py  (+2 more)
(+43 files in other folders)
